# sub-trans

./: Cargo.toml  LICENSE  README.md
.github/workflows/: demo.yml
src/: error.rs  main.rs  subtitle.rs
src/translator/: deepl.rs  mod.rs
