[package]
name = "sub-trans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
reqwest = { version = "0.11.8", features = ["json", "blocking"] }
serde = { version = "1.0.133", features = ["derive"] }
subparse = "0.7.0"
thiserror = "1.0.30"
